Pre-users backup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,5 @@
-<h1>Header 1</h1>
-<h2>Header 2</h2>
-<h3>Header 3</h3>
-<h4>Header 4</h4>
-<h5>Header 5</h5
-<h6>Header 6</h6>
-<p> Paragraph </p>
-<a href = posts.html>Link</a>
+<h1>Aarons Blog</h1>
+<h2>About Me</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod lorem sit amet tincidunt dignissim. Quisque maximus congue ligula quis hendrerit. Donec condimentum est eu purus auctor aliquam et eu neque. Nunc tincidunt erat eget imperdiet varius. Vestibulum sed eleifend ipsum. Integer vel dui at nisl accumsan molestie vel a risus. Morbi dictum enim at diam mattis, non finibus dolor luctus. Morbi dictum augue vel dui dapibus, sagittis viverra diam faucibus. Donec finibus, turpis eget varius egestas, lacus urna efficitur enim, at fringilla urna orci vel mi. Curabitur dictum dapibus augue sed congue. Phasellus porttitor lectus id sem gravida dapibus. Suspendisse eu turpis nunc. Nulla pretium eu ligula at elementum. Nulla sapien mi, aliquet quis leo ullamcorper, imperdiet tristique massa. Sed in suscipit mi. Integer vel augue lorem.</p>
+
+<a href = posts.html>Blog</a>
