--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,10 @@
 
 <h1>Posts</h1>
 <%= link_to '[ Home ]', root_path %>
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
     <% @posts.each do |post| %>
-      <tr>
-        <td><%= link_to post.title, post %></td>
-      </tr>
+      <%= link_to post.title, post %><br>
     <% end %>
-  </tbody>
-</table>
 
 <br>
 
